src/client/assets/stylesheets/asset-list.less
table.grid {
    table-layout: fixed;
    width: 100%;
    border-collapse: separate;
    empty-cells: show;
    border-spacing: 0;

    tbody {
        tr {
            cursor: pointer;

            &.selected, &:hover {
                .select-arrow svg,
                .delete-icon svg {
                    opacity: 0.5;
                }
            }

            &.selected {
                background-color: rgba(204,237,249,.5);
                border-color: #73d0ee;

                &:not(:hover) {
                    td, td.spacer, td:last-child {
                        border-bottom: 1px solid #E1E2E4;
                        border-top: 1px solid #E1E2E4;
                    }
                    & + tr td {
                        border-top-color: transparent;
                    }
                }
            }

            &:hover {
                td {
                    background-color: rgba(221, 226, 233, 0.5);
                    border-bottom: 1px solid #b7bcc4;
                    border-top: 1px solid #b7bcc4;
                    transition: 0.5s background-color ease-out;
                    transition: 0.5s border-color ease-out;
                }
                & + tr td {
                    border-top-color: transparent;
                }
            }

            &:not(:hover) {
                td.spacer, td:last-child {
                    border: 1px solid transparent;
                }

                td:last-child {
                    border-bottom-right-radius: 3px;
                    border-top-right-radius: 3px;
                    border-left: 0px;
                }

                td.spacer {
                    border-bottom-left-radius: 3px;
                    border-top-left-radius: 3px;
                    border-right: 0px;
                }
            }

            td.spacer, td:last-child {
                width: 24px;
            }

            td {
                vertical-align: middle;
                height: 35px;
                border-bottom: 1px solid transparent;
                border-top: 1px solid #E1E2E4;

                &.icon {
                    width: 24px;

                    svg {
                        width: 10px;
                    }
                }

                &.number {
                    width: 100px;
                }

                &.name {
                    word-break: break-all;
                }

                &.select-arrow,
                &.delete-icon {
                    padding-top: 5px;
                }

                &.select-arrow svg,
                &.delete-icon svg {
                        width: 10px;
                        opacity: 0;
                        transition: opacity 0.25s ease-out;
                }
            }
        }
    }
}

